--- a/nandi-frontend/src/components/Home/Home.css
+++ b/nandi-frontend/src/components/Home/Home.css
@@ -207,6 +207,18 @@ body {
   background-color: #d1eef9;
 }
 
+.app-card.karma-cafe {
+  background-color: #d1eef9;
+}
+
+.app-card.karma-cafe .app-icon {
+  background-color: #6b9ec3;
+}
+
+.app-card.dharma-path .app-icon {
+  background-color: #b17d4a;
+}
+
 .app-card .app-icon {
   width: 40px;
   height: 40px;
@@ -356,7 +368,7 @@ body {
 .karmacafe-card {
   grid-row: span 2;
   height: auto;
-  background-color: #f0f7fa !important;
+  background-color: #fafaf0 !important;
   display: flex;
   flex-direction: column;
   align-items: center;
